fix: Remove focus indicator on code blocks on iOS

--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -73,3 +73,7 @@ button {
     padding: 0 var(--large-space);
   }
 }
+
+code {
+  outline: 0;
+}
